Proposed (version #2) fix for bug #1948: "system variable query_prealloc_size can be only global"